--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,17 @@
-# Compiled Object files, Static and Dynamic libs (Shared Objects)
-*.o
-*.a
-*.so
-
-# Folders
-_obj
-_test
-
-# Architecture specific extensions/prefixes
 *.[568vq]
-[568vq].out
-
+*.a
 *.cgo1.go
 *.cgo2.c
+*.exe
+*.o
+*.prof
+*.so
+*.test
+[568vq].out
 _cgo_defun.c
 _cgo_gotypes.go
 _cgo_export.*
-
+_obj
+_test
 _testmain.go
-
-*.exe
-*.test
-*.prof
+rpdns
